--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,8 +3,14 @@ $color-texto:#8D8383;
 $color-rojiso:#BB1313;
 a{text-decoration:none;}
 a:hover{text-decoration:none;}
+.tam-1{
+	width:20px;
+}
 .text-10{
 	font-size:10px;
+}
+.text-11{
+	font-size:11px;
 }
 .f-plomo{
 	background-color: #DDE0E2;
@@ -29,7 +35,7 @@ a:hover{text-decoration:none;}
 .left{text-align:left;}
 .right{text-align:right;}
 .enlinea{display:inline-block;}
-
+.absoluta{position:absolute;}
 #blog,#columnistas{
 	h1{font-family: "Courgette", sans-serif; font-weight:700;}
 	padding:1em 0;
@@ -88,48 +94,87 @@ a:hover{text-decoration:none;}
 }
 #contacto{
 	h1{font-family: "Courgette", sans-serif; font-weight:700;}
-	..enviar{text-align:center;}
-}
-
-.ultima-noticia{
-	padding:0.5em;
-	text-align:left;
-	a{color:#111;}
-}
-.aweita,.popular,.wapa,.libero{
-	border:1px solid #DAD3D3;
-	padding:0.5em;
-	margin:0 -1em;
-	text-align:center;
-	img{margin:auto;}
-	li{
-		a{color:#111;font-weight:bold; text-align:left;}
-	}
-	a{color:#111;}
-	span {color:$color-rojiso;}
-	.borde-bajo{ padding: 0.5; border-bottom: 3px solid #621675;}
-}
-.destacadas{
-	a{font-weight:bold;}
-	li {
-		a{color:#111;font-weight:bold;}
+	.enviar{
+		img{display:inline;}
+		text-align:center;
 	}
 }
-.especiales{
+#inicio{
+	h1,h3,h4{font-family: "Courgette", sans-serif; font-weight:700; text-align:center;}
+	.noticias{
+		h3,h4{position:relative; bottom:5em;color:#fff;text-align:left}
+		.capa-degradada{
+			width:100%; 
+			height:auto;
+			background-color:rgba(0,0,0,0.3);
+			position:relative;
+			top:0;
+		}
 
-	.capa{
-
-		background-color:rgba(185, 184, 192, 0.8);
-		bottom:30px;
-		a{color:#111;font-weight:bold;}
 	}
-}
-.blogueros{
-	a{color:#111;}
-	img{margin:auto;}
+	.columnista{
+		img{border: 2px solid #fff; margin:0.5em auto;}
+		li{
+			width:120px;
+			h5{font-weight:bold;}
+		}
+	}
+	.secciones{
+		li{
+			width:230px;
+			margin: 0.5em 0;
+			.home-col{padding:0.5em 0; border: 1px solid $color-texto;}
+			h5{position:relative; bottom:5em;color:#fff;text-align:left}
+					
+		}
+	}
+	.suscribete{
+		background-image:url(../image/puntos.png);
+		background-size:cover;
+		background-repeat:no-repeat;
+		.div{background-color:#fff; margin:1em;padding:0.5em;}
+		.img{margin:auto;}	
+	}
+	.ultima-noticia{
+		padding:0.5em;
+		text-align:left;
+		a{color:#111;}
+	}
+	.aweita,.popular,.wapa,.libero{
+		border:1px solid #DAD3D3;
+		padding:0.5em;
+		margin:0.5em 0;
+		text-align:center;
+		img{margin:auto;}
+		li{
+			a{color:#111;font-weight:bold; text-align:left;}
+		}
+		a{color:#111;}
+		span {color:$color-rojiso;}
+		.borde-bajo{ padding: 0.5; border-bottom: 3px solid #621675;}
+	}
+	.destacadas{
+		a{font-weight:bold;}
+		li {
+			a{color:#111;font-weight:bold;}
+		}
+	}
+	.especiales{
 
-	.bloguer{
-		padding:0;
-		margin:0;
+		.capa{
+
+			background-color:rgba(185, 184, 192, 0.8);
+			bottom:30px;
+			a{color:#111;font-weight:bold;}
+		}
+	}
+	.blogueros{
+		a{color:#111;}
+		img{margin:auto;}
+
+		.bloguer{
+			padding:0;
+			margin:0;
+		}
 	}
 }
