--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,13 @@
-//*{ 	outline:1px solid rgba(255,0,0,0.3); }
+*{ 	outline:1px solid rgba(255,0,0,0.3); }
 $color-texto:#8D8383;
 $color-rojiso:#BB1313;
+$color-blanco: #fff;
+$color-azul: #112E8D;
+$color-celeste: #4DB8EA;
+$color-amarillo: #FFBF00;
+$color-naranja: #FF4000;
+$color-gris: #DDE0E2;
+$text-14: 14px;
 a{text-decoration:none;}
 a:hover{text-decoration:none;}
 .text-10{
@@ -15,16 +22,38 @@ a:hover{text-decoration:none;}
 .t-negro{
 	color:#111;
 }
+.inline-block{display: inline-block;}
+.azul{ color: $color-azul;}
+.celeste{color: $color-celeste;}
+.rojo{ color: $color-rojiso;}
+.amarillo{color: $color-amarillo;}
+.naranja{color: $color-naranja;}
+.mg-0{margin:0;}
+.pd-0{padding: 0;}
+.font-weight-bold{font-weight: bold;}
 .t-rojo{color:$color-rojiso;}
 .t-azulado{color:#112E8D;}
 .t-celeste{color:#4DB8EA;}
+.t-courguete{font-family: "Courgette", sans-serif;}
+.t-oswald{font-family: "Oswald", sans-serif;}
 .mg-medio{margin:0.5em 0em;}
 .pd-medio{padding:0.5em 0;}
 .btn-rojo{font-weight:bold;background-color:$color-rojiso;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:2em auto;}
 .btn-plomo{font-weight:bold;background-color:#95A6AB;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:2em auto;}
 .borde-inf{	border-bottom:1px solid $color-texto;padding:0.5em 0;}
-
+.ptb-2{padding-top: 2%; padding-bottom: 2%;}
+.list-redes a:nth-child(1){ background: $color-rojiso; color: $color-blanco; margin-right: 2px; margin-left: 5px;}
+.list-redes .li-span a{background: none;}
+.list-redes .li-span span{font-size:$text-14;}
+.list-redes p{padding-left:2px; padding-right: 5%;}
+.input-redes-div{margin-left: 2px; margin-right: 5%;}
+.input-redes{border:none; width: 50px; background: $color-gris;}
+.justificado{text-align:justify;}
+.left{text-align:left;}
+.right{text-align:right;}
+.enlinea{display:inline-block;}
 #blog,#columnistas{
+	h1{font-family: "Courgette", sans-serif; font-weight:700;}
 	padding:1em 0;
 	ul{text-align:center;}
 	li{vertical-align:top;}
@@ -59,15 +88,16 @@ a:hover{text-decoration:none;}
 
 #columnistas{
 	.menu-abc{
-		padding: 0.5em;
+		margin: 0.5em 0;
+		padding: 0.7em;
 		background-color:$color-rojiso;
 		a{color:#fff; text-decoration:none; padding:0.2em 0.8em;border-radius:30px;}
 		a:hover{text-decoration:none; background-color:#E71111;}
 	}
 	.columnista{
 		background-color: #CECED0;
-		margin: 0.2em 0.02em;
-		width: 160px;
+		margin: 2px 1px;
+		width: 175px;
 		height:60px;
 		img{
 			border:2px solid #fff;
@@ -77,6 +107,10 @@ a:hover{text-decoration:none;}
 		p{color:#383661; text-align:left; font-size:11px; font-weight:bold;}
 		.col-xs-7{padding:0;}
 	}
+}
+#contacto{
+	h1{font-family: "Courgette", sans-serif; font-weight:700;}
+	.enviar{text-align:center;}
 }
 
 .ultima-noticia{
