--- a/assets/jade/ci/mixin.jade
+++ b/assets/jade/ci/mixin.jade
@@ -66,7 +66,7 @@ mixin header-editorial(titulo,subtitulo)
 		h4= titulo
 		p= subtitulo
 mixin autor(titulo,nombreautor)
-	.div
+	.autor
 		h4= titulo
 		p= 'por:' + nombreautor
 //- mixin para generar los articulos de seccion blog y columnistas
