--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -78,8 +78,9 @@ block content
 					a.borde-bajo.text-10(href="#") Mas en 
 						span aweita.pe
 				//-fotos destacadas
-				.row.destacadas.borde-inf.pd-medio
-					a.btn-plomo(href="#") FOTOS DESTACADAS
+				.row.destacadas.borde-inf.pd-medio.mg-medio
+					.div.text-center.mg-medio
+						a.btn-plomo(href="#") FOTOS DESTACADAS
 					+imagen('../image/img_fotodes_prominent.jpg')
 					a.t-negro(href="#") Lineas de Nazca: admiten prision preventiva de 6 meses para activistas de Greenpeace
 					ul.list-unstyled.list-inline
@@ -87,8 +88,9 @@ block content
 						+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
 						+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
 				//-especiales
-				.row.especiales.borde-inf.pd-medio
-					a.btn-plomo(href="#") ESPECIALES
+				.row.especiales.borde-inf.pd-medio.mg-medio
+					.div.text-center.mg-medio
+						a.btn-plomo(href="#") ESPECIALES
 					ul.list-unstyled.list-inline
 						+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
 						+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
