css lista especiales

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -116,7 +116,7 @@ block content
 			//-especiales
 			.row.especiales.borde-inf.pd-medio
 				a.btn-plomo(href="#") ESPECIALES
-				ul.list-unstyled.list-inline
+				ul.list-unstyled.list-inline.listaespeciales
 					+imagen-capa('../image/img_especiales_aside.jpg','Regimen laboral juvenil')
 					+imagen-capa('../image/img_especiales_papa.jpg','COP 20')
 					+imagen-capa('../image/img_especiales_cesar.jpg','Concentración de Medios')
