--- a/assets/jade/ci/layout.jade
+++ b/assets/jade/ci/layout.jade
@@ -41,7 +41,7 @@ html(lang='es-PE')
 										+imagen('../image/logo-la-republica.jpg')
 							.col-md-4
 								block header-editorial-noticia
-							.col-md-4.text-center
+							.col-md-4
 								block autor
 									.editorial-autor
 										.img-edit
