--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -196,4 +196,12 @@ block content
 					a.borde-bajo.text-10(href="#") Mas en 
 							span Wapa.pe
 				//-reportero ciudadano
-				.row.mg-medio
+				.row.mg-medio.reportero-ciudadano
+					.div
+						+imagen('../image/img_reporteroc.png')
+						h3.text-center Reportero Ciudadano
+						+reportero-ciudadano('../image/img_sd_reporteroc.jpg','Estacionamiento Indebido','¿Esta permitido que dejen su auto en reiteradas ocasione stoda la noche en la puerta de tu casa? Placa DGR256, eso que antes lo dejaba entre la vereda y mi puerta.')
+						.div.text-center
+							a.btn-rojo.mg-medio(href="#") ENVIAR FOTOS
+						.div.text-center
+							a.T-rojo.mg-medio(href="#") Mas fotos
