--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -165,6 +165,9 @@ block content
 						+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
 				//-preguntas
 				.row.preguntas.mg-medio
+					+imagen('../image/img_pregunta.png')
+					+pregunta-hoy('¿Cree usted que la premier Ana Jara debe renunciar?','radio','Si','No')
+					+pregunta-ayer('¿Cree usted que se militarizo la conmemoracion del fallo de la Haya en Lima?')
 				//-libero
 				.row.libero.pd-medio.mg-medio
 					+imagen('../image/logo_libero.jpg')
@@ -204,4 +207,4 @@ block content
 						.div.text-center
 							a.btn-rojo.mg-medio(href="#") ENVIAR FOTOS
 						.div.text-center
-							a.T-rojo.mg-medio(href="#") Mas fotos
+							a.t-rojo.mg-medio(href="#") Mas fotos
