--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,32 @@
+.pdt-2 {
+  padding-top: 2%; }
+
+.pdt-5 {
+  padding-top: 5%; }
+
+.pdt-10 {
+  padding-top: 10%; }
+
+.pd-1 {
+  padding: 1%; }
+
+.mgt-2 {
+  margin-top: 2%; }
+
+.mgt-5 {
+  margin-top: 5%; }
+
+.text-12 {
+  font-size: 12px; }
+
 a {
   text-decoration: none; }
 
 a:hover {
   text-decoration: none; }
+
+.position-relative {
+  position: relative; }
 
 .tam-1 {
   width: 20px; }
@@ -14,7 +38,7 @@ a:hover {
   font-size: 11px; }
 
 .f-plomo {
-  background-color: #DDE0E2; }
+  background-color: #F2F2F2; }
 
 .t-plomo {
   color: #8D8383; }
@@ -24,6 +48,15 @@ a:hover {
 
 .inline-block {
   display: inline-block; }
+
+.inline {
+  display: inline; }
+
+.bg-azulino {
+  background: #0B4C5F; }
+
+.color-blanco {
+  color: #fff; }
 
 .azul {
   color: #112E8D; }
@@ -49,6 +82,9 @@ a:hover {
 .font-weight-bold {
   font-weight: bold; }
 
+.font-style-italic {
+  font-style: italic; }
+
 .t-rojo {
   color: #BB1313; }
 
@@ -57,6 +93,9 @@ a:hover {
 
 .t-celeste {
   color: #4DB8EA; }
+
+.t-pt-sans {
+  font-family: "PT Sans", sans-serif; }
 
 .t-courguete {
   font-family: "Courgette", sans-serif; }
@@ -117,31 +156,23 @@ a:hover {
 .input-redes {
   border: none;
   width: 50px;
-  background: #DDE0E2; }
+  background: #F2F2F2; }
 
-.header-logo {
-  vertical-align: middle;
-  padding-top: 10%; }
+.header-editorial {
+  border: 1px solid #F2F2F2;
+  border-bottom: 2px solid #0B4C5F; }
+
+.header-editorial p:nth-child(1) {
+  top: -5px; }
 
 .editorial-autor .img-edit {
-  display: inline-block;
-  vertical-align: middle; }
-
-.editorial-autor .img-edit img {
-  max-height: 100%; }
+  display: inline-block; }
 
 .editorial-autor .autor {
-  display: inline-block;
-  width: 160px;
-  vertical-align: middle;
-  border-radius: 5%;
-  border: 1px solid #DDE0E2;
-  padding: 3% 1%; }
-
-.editorial-autor .autor h4, .editorial-autor p {
-  margin: 0;
-  padding: 0;
-  font-size: 12px; }
+  padding: 2% 9%;
+  border: 1px solid #F2F2F2;
+  vertical-align: top;
+  border-radius: 5px; }
 
 .justificado {
   text-align: justify; }
@@ -345,22 +376,3 @@ a:hover {
 #inicio .blogueros .bloguer {
   padding: 0;
   margin: 0; }
-
-.listaespeciales a {
-  left: 40px;
-  position: relative;
-  bottom: 40px;
-  background-color: rgba(255, 255, 255, 0.5);
-  color: #000;
-  padding: 10px 40px;
-  text-align: center;
-  font-weight: bold; }
-
-.listaespeciales a:nth-child(4) {
-  left: 40px;
-  position: relative;
-  bottom: 40px;
-  background-color: rgba(255, 255, 255, 0.5);
-  color: #000;
-  padding: 10px 20px;
-  text-align: center; }
