--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,15 +1,25 @@
-// *{ 	outline:1px solid rgba(255,0,0,0.3); }
+//*{ 	outline:1px solid rgba(255,0,0,0.3); }
 $color-texto:#8D8383;
 $color-rojiso:#BB1313;
 $color-blanco: #fff;
 $color-azul: #112E8D;
+$color_azulino: #0B4C5F;
 $color-celeste: #4DB8EA;
 $color-amarillo: #FFBF00;
 $color-naranja: #FF4000;
-$color-gris: #DDE0E2;
+$color-gris: #F2F2F2;
 $text-14: 14px;
+//aplicado a header
+.pdt-2{ padding-top:2%;}
+.pdt-5{ padding-top:5%;}
+.pdt-10{padding-top:10%;}
+.pd-1{padding: 1%;}
+.mgt-2{margin-top: 2%;}
+.mgt-5{margin-top: 5%;}
+.text-12{font-size: 12px;}
 a{text-decoration:none;}
 a:hover{text-decoration:none;}
+.position-relative{position: relative;}
 .tam-1{
 	width:20px;
 }
@@ -20,7 +30,7 @@ a:hover{text-decoration:none;}
 	font-size:11px;
 }
 .f-plomo{
-	background-color: #DDE0E2;
+	background-color: $color-gris;
 }
 .t-plomo{
 	color:$color-texto;
@@ -29,6 +39,9 @@ a:hover{text-decoration:none;}
 	color:#111;
 }
 .inline-block{display: inline-block;}
+.inline{display: inline;}
+.bg-azulino{background: $color-azulino;}
+.color-blanco{color: $color-blanco;}
 .azul{ color: $color-azul;}
 .celeste{color: $color-celeste;}
 .rojo{ color: $color-rojiso;}
@@ -37,9 +50,11 @@ a:hover{text-decoration:none;}
 .mg-0{margin:0;}
 .pd-0{padding: 0;}
 .font-weight-bold{font-weight: bold;}
+.font-style-italic{font-style: italic;}
 .t-rojo{color:$color-rojiso;}
 .t-azulado{color:#112E8D;}
 .t-celeste{color:#4DB8EA;}
+.t-pt-sans{font-family: "PT Sans", sans-serif;}
 .t-courguete{font-family: "Courgette", sans-serif;}
 .t-oswald{font-family: "Oswald", sans-serif;}
 .mg-medio{margin:0.5em 0em;}
@@ -54,10 +69,11 @@ a:hover{text-decoration:none;}
 .list-redes p{padding-left:2px; padding-right: 5%;}
 .input-redes-div{margin-left: 2px; margin-right: 5%;}
 .input-redes{border:none; width: 50px; background: $color-gris;}
-.header-logo{vertical-align:middle;}
+.header-editorial{border: 1px solid $color-gris; border-bottom: 2px solid $color-azulino;}
+.header-editorial p:nth-child(1){top:-5px;}
 .editorial-autor{
 	.img-edit{ display: inline-block; }
-	.autor{display: inline-block;}
+	.autor{padding: 2% 9%; border: 1px solid $color-gris; vertical-align:top; border-radius:5px;}
 }
 .justificado{text-align:justify;}
 .left{text-align:left;}
