--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -167,7 +167,7 @@ block content
 				.row.preguntas.mg-medio
 					+imagen('../image/img_pregunta.png')
 					+pregunta-hoy('¿Cree usted que la premier Ana Jara debe renunciar?','radio','Si','No')
-					+pregunta-ayer('¿Cree usted que se militarizo la conmemoracion del fallo de la Haya en Lima?')
+					+pregunta-ayer('¿Cree usted que se militarizo la conmemoracion del fallo de la Haya en Lima?','55','25')
 				//-libero
 				.row.libero.pd-medio.mg-medio
 					+imagen('../image/logo_libero.jpg')
