--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,28 +120,13 @@ a:hover {
   background: #DDE0E2; }
 
 .header-logo {
-  vertical-align: middle;
-  padding-top: 10%; }
-
-.editorial-autor .img-edit {
-  display: inline-block;
   vertical-align: middle; }
 
-.editorial-autor .img-edit img {
-  max-height: 100%; }
+.editorial-autor .img-edit {
+  display: inline-block; }
 
 .editorial-autor .autor {
-  display: inline-block;
-  width: 160px;
-  vertical-align: middle;
-  border-radius: 5%;
-  border: 1px solid #DDE0E2;
-  padding: 3% 1%; }
-
-.editorial-autor .autor h4, .editorial-autor p {
-  margin: 0;
-  padding: 0;
-  font-size: 12px; }
+  display: inline-block; }
 
 .justificado {
   text-align: justify; }
@@ -345,22 +330,3 @@ a:hover {
 #inicio .blogueros .bloguer {
   padding: 0;
   margin: 0; }
-
-.listaespeciales a {
-  left: 40px;
-  position: relative;
-  bottom: 40px;
-  background-color: rgba(255, 255, 255, 0.5);
-  color: #000;
-  padding: 10px 40px;
-  text-align: center;
-  font-weight: bold; }
-
-.listaespeciales a:nth-child(4) {
-  left: 40px;
-  position: relative;
-  bottom: 40px;
-  background-color: rgba(255, 255, 255, 0.5);
-  color: #000;
-  padding: 10px 20px;
-  text-align: center; }
