--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,6 +7,7 @@ $color_azulino: #0B4C5F;
 $color-celeste: #4DB8EA;
 $color-amarillo: #FFBF00;
 $color-naranja: #FF4000;
+$color-negro: #111;
 $color-gris: #F2F2F2;
 $text-14: 14px;
 //aplicado a header
@@ -41,6 +42,7 @@ a:hover{text-decoration:none;}
 .inline-block{display: inline-block;}
 .inline{display: inline;}
 .bg-azulino{background: $color-azulino;}
+.bg-rojiso{background: $color-rojiso;}
 .color-blanco{color: $color-blanco;}
 .azul{ color: $color-azul;}
 .celeste{color: $color-celeste;}
@@ -72,8 +74,16 @@ a:hover{text-decoration:none;}
 .header-editorial{border: 1px solid $color-gris; border-bottom: 2px solid $color-azulino;}
 .header-editorial p:nth-child(1){top:-5px;}
 .editorial-autor{
-	.img-edit{ display: inline-block; }
-	.autor{padding: 2% 9%; border: 1px solid $color-gris; vertical-align:top; border-radius:5px;}
+	.img-edit{ display: inline-block; vertical-align:top; }
+	.autor{padding: 2% 8%; border: 1px solid $color-gris; vertical-align:top; border-radius:5px;}
+}
+.header-menu{margin: 0 auto; padding:0;}
+.header-menu{
+	li{background: $color-rojiso;}
+	a{color: $color-blanco; font-family: "PT Sans", sans-serif; font-size:11px; margin-left:0.6em;}
+}
+.tema-dia{
+	a:nth-child(1){background: $color-negro; font-family: "PT Sans"; font-size:11px; color: $color-blanco; }
 }
 .justificado{text-align:justify;}
 .left{text-align:left;}
